--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
     <title>Shoes</title>
 </head>
 
 <body>
-    
+    <div class="full full-red">
+        <img src="./asset/img/01.png" alt="">
+        <h1>Il nostro prodotto di punta</h1>
+    </div>
+
+    <div class="full full-green ">
+        <img src="./asset/img/02.png" alt="">
+        <h1>Il nostro prodotto di punta</h1>
+    </div>
+
+
+    <div class="full full-yellow ">
+        <img src="./asset/img/03.png" alt="">
+        <h1>Il nostro prodotto di punta</h1>
+    </div>
 </body>
 
 </html>
+
+
